cmake_minimum_required(VERSION 3.13)
project(esp8266-blink C ASM)

set(TARGET_GROUP release CACHE STRING "Group to build")

if(TARGET_GROUP STREQUAL release)
    add_subdirectory(firmware)
elseif(TARGET_GROUP STREQUAL test)
    include(cmake/test.cmake)
    include(CTest)
    add_subdirectory(Unity)
    add_subdirectory(cmock)
    add_subdirectory(test)
else()
    message(FATAL_ERROR "I don't know the TARGET_GROUP you gave me!")
endif()
